# event-framework

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  building-the-framework-1.md  building-the-framework-2.md  ddd.md  existing-solutions.md  glossary.md  index.md
event_framework/: __init__.py  core.py
tests/unit/event_framework/: __init__.py  test_core.py
